--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Amr Salud</title>
 </head>
 <body>
-  <h1 class="alert alert-info">Amr Salud</h1>
+  <h1 class="alert alert-info">Amd Salud</h1>
   <hr>
    <h2>Mapa del departamento San lorenzo</h2>
    <br>
